Bug 355477 - "map mouse buttons 8-9 to back/forward" [p=tester@tester.ca (Olivier Crête) r+sr=roc a1.9=schrep]